--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "path": "^0.12.7",
     "pm2": "^2.6.1",
     "q": "^1.5.0",
+    "request": "^2.83.0",
     "sequelize": "3.30.2",
     "sequelize-cli": "2.5.1",
     "sequelize-hierarchy": "0.5.8",
