--- a/package.json
+++ b/package.json
@@ -7,19 +7,12 @@
     "start": "nodemon --watch . --exec 'ts-node' server.ts",
     "lint": "eslint --max-warnings 3 ./",
     "test": "lab -a code -v -L -T ./node_modules/lab-transform-typescript -c --coverage-exclude client --coverage-exclude config --coverage-exclude dist --coverage-exclude migrations --coverage-exclude models --coverage-exclude seeders",
-    "prod-start": "yarn install && ./node_modules/.bin/pm2 install typescript && yarn run migrate && NODE_ENV=production ./node_modules/.bin/pm2 delete -s production  || : && NODE_ENV=production ./node_modules/.bin/pm2 start server.ts --name production",
-    "test-start": "yarn install && ./node_modules/.bin/pm2 install typescript && yarn run migrate && NODE_ENV=testServer ./node_modules/.bin/pm2 delete -s testServer || : && NODE_ENV=testServer ./node_modules/.bin/pm2 start server.ts --name testServer",
-    "local-start": "yarn install && ./node_modules/.bin/pm2 install typescript && yarn run migrate && ./node_modules/.bin/pm2 delete -s localServer || : && ./node_modules/.bin/pm2 start server.ts --name localServer",
-    "precommit": "lint-staged",
+    "prod-start": "npm install && ./node_modules/.bin/pm2 install typescript && npm run migrate && NODE_ENV=production ./node_modules/.bin/pm2 delete -s production  || : && NODE_ENV=production ./node_modules/.bin/pm2 start server.ts --name production",
+    "test-start": "npm install && ./node_modules/.bin/pm2 install typescript && npm run migrate && NODE_ENV=testServer ./node_modules/.bin/pm2 delete -s testServer || : && NODE_ENV=testServer ./node_modules/.bin/pm2 start server.ts --name testServer",
+    "local-start": "npm install && ./node_modules/.bin/pm2 install typescript && npm run migrate && ./node_modules/.bin/pm2 delete -s localServer || : && ./node_modules/.bin/pm2 start server.ts --name localServer",
     "migrate": "node_modules/.bin/sequelize db:migrate; node_modules/.bin/sequelize db:seed:all",
-    "migrate-local": "NODE_ENV=local yarn run migrate",
+    "migrate-local": "NODE_ENV=local npm run migrate",
     "pmlog": "./node_modules/.bin/pm2 logs"
-  },
-  "lint-staged": {
-    "*.js": [
-      "eslint --fix",
-      "git add"
-    ]
   },
   "repository": {
     "type": "git"
@@ -40,6 +33,7 @@
     "babel-core": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "boom": "^5.2.0",
+    "bower": "^1.8.2",
     "confidence": "^3.0.2",
     "continuation-local-storage": "^3.2.0",
     "fs": "0.0.1-security",
@@ -64,11 +58,11 @@
     "sequelize": "3.30.2",
     "sequelize-cli": "2.5.1",
     "sequelize-hierarchy": "0.5.8",
+    "ts-node": "^4.1.0",
     "vision": "^4.1.1"
   },
   "devDependencies": {
     "code": "^4.1.0",
-    "husky": "^0.14.3",
     "lab": "^14.2.2",
     "lab-transform-typescript": "^3.0.1",
     "lint-staged": "^4.1.3",
